2013-02-22  Pedro Vicente  <pvicente@uci.edu>

  * nco_blb_crd_var_trv() Detect coordinate variables into GTT (Group Traversal Table)
  
  * nco_lmt_evl_dmn_crd() Parse user-specified limits into hyperslab specifications 
  Can be used for dimensions or coordinate variables
  
  * nco_bld_lmt() Assign user specified dimension limits to GTT (Group Traversal Table)
  
2013-02-22  Charlie Zender  <zender@uci.edu>

	* Implement new nco_cpy_var_dfn() API which uses GPE and nco_inq_dmn_grp_id()
	New routines only called when dbg_lvl=5. Still buggy.
	Old routines, invoked when dbg_lvl != 5, work fine.

2013-02-21  Pedro Vicente  <pvicente@uci.edu>

        * ncks, ncbo, ncecat: aggregate building of GTT (Group Traversal Table) into a function
          nco_bld_trv_tbl(); allocate elements as needed

2013-02-21  Charlie Zender  <zender@uci.edu>

	* Tighten and complete algorithm to identify ancestor groups in nco_xtr_dfn()

2013-02-20  Pedro Vicente  <pvicente@uci.edu>

        * ncks eliminate lmt_all array and replace with GTT (Group Traversal Table)
        nco_cnk_sz_set_trv() set chunksize parameters using object variable

2013-02-20  Charlie Zender  <zender@uci.edu>

	* Die with graceful hint on NC_EFILLVALUE/NC_ELATEFILL errors

2013-02-19  Charlie Zender  <zender@uci.edu>

	* ncrename requires presence of attributes in all variables when attribute is not
 	prefixed with dot, unless attribute is a global	or group attribute.

2013-02-16  Pedro Vicente  <pvicente@uci.edu>

	* ncks eliminate lmt_all array and replace with GTT (Group Traversal Table)
	structure that stores full path names for dimensions and coordinate variables.
	nco_xtr_wrt_trv() writes extracted data to output file
	nco_xtr_dfn_trv() defines extracted groups, variables, and attributes in output file
	nco_prn_var_val_trv() prints variable data

	* ncks limits are stored in the GTT dimension structure and MSA is applied.
	Distribute these to variables when writing with nco_msa_prn_var_val_trv().